--- a/server/docker/docker-compose.local.server.yml
+++ b/server/docker/docker-compose.local.server.yml
@@ -11,6 +11,7 @@ services:
     - ../src:/go/src/github.com/Doer-org/hack-camp_vol9_2022-1
     environment:
       - ENVIRONMENT=${ENVIRONMENT}
+      - APIKEY=${APIKEY}
       - DB_DATABASE=${DB_DATABASE}
       - DB_HOST=${DB_HOST}
       - DB_USER=${DB_USER}
