--- a/front/package.json
+++ b/front/package.json
@@ -13,6 +13,7 @@
     "react-hook-form": "^7.40.0",
     "react-router-dom": "^6.4.4",
     "react-scripts": "5.0.1",
+    "react-spring": "^9.5.5",
     "react-use-websocket": "^4.2.0",
     "web-vitals": "^2.1.4"
   },
